Adiciona arquivos ausentes
